--- a/stylesheets/slider.css
+++ b/stylesheets/slider.css
@@ -122,7 +122,7 @@
   border-radius: 3px;
 }
 .noUi-connect {
-  background: #3FB8AF;
+  background: #191970;
 }
 /* Handles and cursors;
  */
@@ -135,7 +135,7 @@
 .noUi-handle {
   border: 1px solid #D9D9D9;
   border-radius: 3px;
-  background: #FFF;
+  background: #191970;
   cursor: default;
   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
 }
