--- a/stylesheets/tooltip.css
+++ b/stylesheets/tooltip.css
@@ -1,14 +1,14 @@
 /* tooltip-class*/
 
 .leaflet-tooltip.class-tooltip {
-  background: green;
-  border: 2px solid cyan
+  background: red;
+  border: 2px solid red
 }
 
 .leaflet-tooltip-left.class-tooltip::before {
-  border-left-color: cyan;
+  border-left-color: red;
 }
 
 .leaflet-tooltip-right.class-tooltip::before {
-  border-right-color: cyan;
+  border-right-color: red;
 }
