--- a/stylesheets/tooltip.css
+++ b/stylesheets/tooltip.css
@@ -2,7 +2,8 @@
 
 .leaflet-tooltip.class-tooltip {
   background: red;
-  border: 2px solid red
+  border: 2px solid red;
+  color: white;
 }
 
 .leaflet-tooltip-left.class-tooltip::before {
